@@ -117,7 +117,8 @@ class TagsHelperRoute extends JHelperRoute
 			if ($items) {
 				foreach ($items as $item)
 				{
-					if (isset($item->query) && isset($item->query['view'])) {
+					if (isset($item->query) && isset($item->query['view']))
+					{
 						$view = $item->query['view'];
 
 						if (!isset(self::$lookup[$view]))
@@ -125,7 +126,8 @@ class TagsHelperRoute extends JHelperRoute
 							self::$lookup[$view] = array();
 						}
 
-						if (isset($item->query['id'][0]))
+						// Only match menu items that list one tag
+						if (isset($item->query['id'][0]) && count($item->query['id']) == 1)
 						{
 							// Here it will become a bit tricky
 							// language != * can override existing entries
