@@ -30,6 +30,7 @@ $ -> Language fix or change
  # [#30463] Missing closing div in compact tag layout. Thanks Thomas Hunziker and Constantin Romankiewicz
  # [#30464] ACL Undefined variable error in contentadministrator.php on line 112. Thanks Constantin Romankiewicz 
  # [#30062] Base Item option in mod_menu has no effect [regression]. Thanks René Alain Erichsen
+ # [#30422] Tags drill down incorrectly finds match to multi-tag tagged items menu item. Thanks Mark
 
 03-Apr-2013 Jean-Marie Simonet
  # [#30349] Cleaned up use of database & query objects. Thanks Peter van Westen and Michael Babker
